# lexip_lxp

./: .gitignore  LICENSE.txt  PRODUCTION_CHECKLIST.md  README.md  TESTING.md  pyproject.toml  requirements.txt  setup.py
layer1_data_lattice/: lexip_compression.py  lexip_format.py  lexip_format_extensions.py  lexip_metadata.py
layer2_vision_pipeline/: lexip_extract.py  lexip_motion.py
layer3_geometric_conditioning/: lexip_curve_analysis.py  lexip_simplify.py  lexip_smooth.py
layer4_structural_translation/: lexip_decoder.py  lexip_encoder.py
layer5_command_automation/: lexip_batch_processor.py  mcp.py
layer6_interfaces/: lexip_editor_gui.py  lexip_file_inspector.py  lexip_viewer_gui.py  lexip_webgl_editor.html  lexip_webgl_viewer.html
layer7_extensions/: lexip_animation_player.py  lexip_cli.py  lexip_gpu_renderer.py  lexip_timeline.py  lexipacm.py  lexipaiassist.py  lexipbatchprocessor.py  lexipcolorengine.py  lexipcompare.py  lexipcurveanalysis.py  lexipexporter.py  lexipmetrics.py  lexipnetwork.py  lexipphysics.py  lexiptimelineengine.py  lexipvisualreport.py
tests/: test_core_modules.py
